--- a/index.html
+++ b/index.html
@@ -1754,7 +1754,7 @@
 		Reveal.initialize({
 			history: true,
 			slideNumber: true,
-			showNotes: true,
+			showNotes: false,
 			dependencies: [{
 				src: 'plugin/markdown/marked.js'
 			},
